--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <h1>"%VITE_ENV%"</h1>
-    <h2>%VITE_ENV_NOT%</h2>
+    <h2 class="%VITE_ENV%">%VITE_ENV_NOT%</h2>
   </body>
 </html>
